# abrechnung

./: .env.example  .eslintrc.json  .gitignore  .oxfmtrc.jsonc  .oxlintrc.jsonc  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  COPYING  MANIFEST.in  Makefile  README.md  authors.md  config.example.yaml  docker-compose.base.yaml  docker-compose.devel.yaml  docker-compose.prod.yaml  jest.config.ts  jest.preset.js  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  test.py  tsconfig.base.json  vitest.workspace.ts
.github/workflows/: backend.yaml  ci_testing.yaml  frontend.yaml  publish-to-pypi.yaml  pull_request.yaml  push_on_master.yaml  release-artifacts.yaml
abrechnung/: __init__.py  __main__.py  admin.py  config.py  demo.py  mailer.py  psql.py  sftpgws.py  subcommand.py  util.py
abrechnung/application/: __init__.py  accounts.py  common.py  export_import.py  groups.py  transactions.py  users.py
abrechnung/cli/: admin.py  database.py  demo.py  main.py
abrechnung/core/: auth.py  decorators.py  errors.py  service.py
abrechnung/database/: __init__.py  cli.py  database.py  migrations.py
abrechnung/database/code/: 0001_views.sql  0002_triggers.sql  0003_constraints.sql  0004_functions.sql
abrechnung/database/revisions/: 0001_initial_schema.sql  0002_subscriptions.sql  0003_account_clearing_relations.sql  0003_file_uploading.sql  0003_purchase_items.sql  0004_account_clearing_relations.sql  0004_relax_db_constraints.sql  0005_partial_data_fetching.sql  0008_file_upload.sql  (+19 more)
abrechnung/dbtest/: __init__.py  compare.py  dbtest.py  group_data.py  groups.py  populate.py  subscriptions.py  user_accounts.py  websocket_connections.py
abrechnung/domain/: __init__.py  accounts.py  export_import.py  groups.py  transactions.py  users.py
abrechnung/framework/: async_utils.py  database.py  decorators.py
abrechnung/http/: __init__.py  accounts.py  api.py  auth.py  cli.py  common.py  context.py  dependencies.py  groups.py  metrics.py  middleware.py  serializers.py  transactions.py  utils.py  websocket.py
api/: openapi.json
apps/web/: openapi-config.ts  package.json  project.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vite.config.ts
apps/web-e2e/: playwright.config.ts  project.json  tsconfig.json
charts/abrechnung/: Chart.yaml  README.md  values.yaml
config/: abrechnung.yaml  config.yaml  nginx-site
config/nginx/: abrechnung
db/: abrechnung.sql  extensions.sql  funcs.sql  rebuild.sql  tables.sql  wipe.sql
db/func/: accounts.sql  gc.sql  group_data.sql  groups.sql  subscriptions.sql  transactions.sql  user_accounts.sql  websocket_connections.sql
debian/: .gitignore  abrechnung-api.service  abrechnung-db-clean.service  abrechnung-mailer.service  abrechnung.dirs  abrechnung.install  abrechnung.links  abrechnung.postinst  build_virtualenv  changelog  control  copyright  rules
debian/source/: options
docker/: Dockerfile  Dockerfile-api  Dockerfile-devel  Dockerfile-dhvirtualenv  Dockerfile-frontend  Dockerfile-web  abrechnung.yaml  build_debian.sh  crontab  entrypoint-frontend.sh  entrypoint.py  nginx-dynamic  nginx-static
docs/: conf.py  index.md  index.rst  requires.txt
docs/_ext/: edit_on_github.py
docs/development/: api.rst  architecture.md  architecture.rst  contributing.md  contributing.rst  packaging.md  packaging.rst  setup.md  setup.rst
docs/usage/: configuration.md  configuration.rst  installation.md  installation.rst
frontend/: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  README.md  collect_translation_strings.sh  i18next-parser.config.json  jest.config.ts  nx.json  package-lock.json  package.json  tsconfig.base.json  workspace.json
libs/api/: .eslintrc.json  jest.config.ts  package.json  project.json  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json  vite.config.ts
libs/components/: .babelrc  .eslintrc.json  jest.config.ts  package.json  project.json  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json  vite.config.ts
libs/core/: jest.config.ts  package.json  project.json  tsconfig.lib.json  vite.config.ts
libs/redux/: .eslintrc.json  jest.config.ts  package.json  project.json  tsconfig.lib.json  vite.config.ts
libs/translations/: package.json  project.json  tsconfig.lib.json
libs/types/: jest.config.ts  package.json  project.json  tsconfig.lib.json  vite.config.ts
libs/utils/: jest.config.ts  package.json  project.json  tsconfig.lib.json  tsconfig.spec.json  vite.config.ts
mobile/: App.tsx  README.md  app.json  babel.config.js  notifications.tsx  package-lock.json  package.json  theme.ts  tsconfig.json
mobile/components/: DateTimeInput.tsx  PositionDialog.tsx  PositionListItem.tsx  TransactionListItem.tsx
mobile/core/: auth.ts  sync.ts  transactions.ts  types.ts  utils.ts  validators.ts
mobile/hooks/: useCachedResources.ts
mobile/navigation/: DrawerContent.tsx  Header.tsx  LinkingConfiguration.ts  index.tsx
mobile/screens/: HomeScreen.tsx  Login.tsx  PreferencesScreen.tsx  ProfileScreen.tsx  Register.tsx
systemd/: abrechnung-api.service  abrechnung-db-clean.service  abrechnung-db-clean.timer  abrechung-mailer.service
tests/: __init__.py  common.py  conftest.py  test_applications.py  test_auth.py  test_config.py  test_group_export_import.py  test_groups.py  test_mailer.py  test_split_mode.py  test_transaction_logic.py  test_transactions.py  utils.py
tests/http/: __init__.py  test_auth.py  test_groups.py  test_transactions.py  test_websocket.py
tests/http_tests/: __init__.py  common.py  test_auth.py  test_groups.py  test_transactions.py  test_websocket.py
tools/: build_debian_packages.py  create_revision.py  demo_deploy_webhook.py  generate_dummy_data.py  make_release.py
web/: .gitignore  .prettierignore  README.md  package-lock.json  package.json  tsconfig.json
web/public/: config.json  index.html  manifest.json
web/src/: App.js  App.test.js  App.tsx  api.js  api.ts  index.css  index.js  index.tsx  serviceWorker.js  utils.js  utils.ts  websocket.js  websocket.ts
(+908 files in other folders)
