[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "abrechnung"
authors = [
    { name = "Michael Loipführer", email = "milo@sft.lol" },
    { name = "Jonas Jelten", email = "jj@sft.lol" },
    { name = "Michael Enßlin", email = "mic@sft.lol" },
]
license = { file = "LICENSE" }
dynamic = ["version", "description"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
    "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.10"
dependencies = [
    "sftkit==0.3.0",
    "pydantic[email]~=2.10.3",
    "pydantic-settings==2.6.1",
    "python-jose[cryptography]~=3.3.0",
    "passlib[bcrypt]~=1.7.0",
    "websockets~=14.1",
    "python-multipart~=0.0.19",
    "PyYAML~=6.0.2",
]

[project.optional-dependencies]
test = [
    "aiosmtpd~=1.4",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx~=0.27",
]
dev = [
    "ruff",
    "mypy==1.13.0",
    "types-PyYAML~=6.0",
    "pylint==3.3.2",
    "bump-my-version~=0.18",
]
docs = ["sphinx", "sphinx-autobuild", "sphinx-autodoc-typehints"]

[project.urls]
Source = "https://github.com/SFTtech/abrechung"
Documentation = "https://abrechnung.readthedocs.io"

[project.scripts]
abrechnung = "abrechnung.cli.main:main"

[tool.setuptools.packages.find]
namespaces = false
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = { attr = "abrechnung.__version__" }
description = { file = ["README.md"] }

[tool.pylint.MASTER]
extension-pkg-whitelist = ["pydantic"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "C",
    "R",
    "fixme",
    "logging-fstring-interpolation",
    "broad-exception-caught",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".idea",
    ".mypy_cache",
    ".venv*",
    "docs"
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "PLE", "PLW"]
ignore = ["E722"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
pretty = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["abrechnung"]

[tool.bumpversion]
current_version = "1.0.0"
commit = false
files = [
    { filename = "abrechnung/__init__.py" },
    { filename = "CHANGELOG.md", search = "Unreleased", replace = "{new_version} ({now:%Y-%m-%d})" },
    { filename = "CHANGELOG.md", search = "v{current_version}...HEAD", replace = "v{current_version}...v{new_version}" },
]

[tool.sftkit]
db_code_dir = "abrechnung/database/code"
db_migrations_dir = "abrechnung/database/revisions"
