[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "abrechnung"
authors = [
    { name = "Michael Loipführer", email = "milo@sft.lol" },
    { name = "Jonas Jelten", email = "jj@sft.lol" },
    { name = "Michael Enßlin", email = "mic@sft.lol" },
]
license = { file = "LICENSE" }
dynamic = ["version", "description"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
    "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.12"
dependencies = [
    "sftkit==0.4.3",
    "prometheus-fastapi-instrumentator==7.0.2",
    "pydantic[email]~=2.12.5",
    "pydantic-settings==2.12.0",
    "python-jose[cryptography]~=3.5.0",
    "bcrypt~=5.0.0",
    "python-multipart~=0.0.21",
    "PyYAML~=6.0.3",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "test" },
    "pre-commit",
    "bump-my-version~=1.2.6",
]
lint = ["ruff", "ty", "types-PyYAML~=6.0", "pylint==4.0.4"]
test = ["aiosmtpd~=1.4", "pytest", "pytest-asyncio", "pytest-cov"]
docs = ["sphinx", "myst-parser", "sphinx-autobuild", "sphinx-copybutton", "sphinx-rtd-theme", "sphinxcontrib-openapi"]

[project.urls]
Source = "https://github.com/SFTtech/abrechung"
Documentation = "https://abrechnung.readthedocs.io"

[project.scripts]
abrechnung = "abrechnung.cli.main:main"

[tool.setuptools.packages.find]
namespaces = false
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = { attr = "abrechnung.__version__" }
description = { file = ["README.md"] }

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.pylint.MASTER]
extension-pkg-whitelist = ["pydantic"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = ["C", "R", "fixme", "logging-fstring-interpolation", "broad-exception-caught", "redefined-outer-name"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".git", ".idea", ".venv*", "docs"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "PLE", "PLW"]
ignore = ["E722"]

[tool.ty.src]
exclude = ["tools/demo_deploy_webhook.py"]

[tool.coverage.run]
source = ["abrechnung"]

[tool.bumpversion]
current_version = "1.7.0"
commit = false
files = [
    { filename = "abrechnung/__init__.py" },
    { filename = "CHANGELOG.md", search = "Unreleased", replace = "{new_version} ({now:%Y-%m-%d})" },
    { filename = "CHANGELOG.md", search = "v{current_version}...HEAD", replace = "v{current_version}...v{new_version}" },
]

[tool.sftkit]
db_code_dir = "abrechnung/database/code"
db_migrations_dir = "abrechnung/database/revisions"
