[metadata]
name = abrechnung
version = attr: abrechnung.__version__
description = Abrechnung - feature complete payment management and bookkeeping.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL3
url = https://github.com/SFTtech/abrechung
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL3 License

[options]
python_requires = >=3.8
setup_requires =
    setuptools
install_requires =
    aiohttp~=3.7
    aiohttp-cors~=0.7
    asyncpg~=0.21
    bcrypt~=3.2
    python-jose~=3.3
    PyYAML~=5.3
    schema~=0.7
    filetype
packages = find:
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    abrechnung = abrechnung.__main__:main